overflow fix and added title on mycompnay screen

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@ body {
 	max-width: 100%;
 	max-height: 100%;
 	box-sizing: border-box;
+	overflow: hidden;
 }
 
 #__next {
